--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "immer": "^5.0.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
     "redux-dynamic-modules": "^5.2.0",
     "redux-form": "^8.2.6"
   },
