--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "immer": "^5.0.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-gesture-handler": "^1.5.0",
     "react-native-paper": "^3.2.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-dynamic-modules": "^5.2.0",
