--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "firebase": "^7.4.0",
     "immer": "^5.0.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
