--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-dynamic-modules": "^5.2.0",
-    "redux-form": "^8.2.6"
+    "redux-form": "^8.2.6",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
